Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 papers:
   - highlight: 1
     title: "Parallel organization of the avian sensorimotor arcopallium: Tectofugal
-      visual pathway in the pigeon (Columba livia)"
+      visual pathway in the pigeon (Columba livia)."
     description: Abstract. The sensory–motor division of the avian arcopallium
       receives parallel inputs from primary and high‐order pallial areas of
       sensory and vocal control pathways, and sends a prominent descending
