--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -37,10 +37,10 @@ papers:
     title: "Intratelencephalic projections of the avian visual dorsal ventricular
       ridge: Laminarly segregated, reciprocally and topographically organized."
     authors: Fernández, M., Ahumada-Galleguillos, P., Sentis, E., Marín, G., &
-      Mpodozis, J. (2019)
+      Mpodozis, J. (2020)
     link:
       url: https://onlinelibrary.wiley.com/doi/abs/10.1002/cne.24757
-      display: "Journal of Comparative Neurology, 528(2), 321– 359. doi:
+      display: "Journal of Comparative Neurology, 528, 321– 359. doi:
         10.1002/cne.24757."
     news: ""
     description: >+
