--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -70,6 +70,42 @@ papers:
       cortical layers II/III.
 
     image: /images/uploads/fernandez2019_a.png
+  - highlight: 0
+    title: Can social behaviour drive accessory olfactory bulb asymmetries? Sister
+      species of caviomorph rodents as a case in point.
+    description: Abstract. In mammals, the accessory olfactory or vomeronasal system
+      exhibits a wide variety of anatomical arrangements. In caviomorph rodents,
+      the accessory olfactory bulb (AOB) exhibits a dichotomic conformation, in
+      which two subdomains, the anterior (aAOB) and the posterior (pAOB), can be
+      readily distinguished. Interestingly, different species of this group
+      exhibit bias of different sign between the AOB subdomains (aAOB larger
+      than pAOB or vice versa). Such species‐specific biases have been related
+      with contrasting differences in the habitat of the different species (e.g.
+      arid vs. humid environments). Aiming to deepen these observations, we
+      performed a morphometric comparison of the AOB subdomains between two
+      sister species of octodontid rodents, Octodon lunatus and Octodon degus.
+      These species are interesting for comparative purposes, as they inhabit
+      similar landscapes but exhibit contrasting social habits. Previous reports
+      have shown that O. degus, a highly social species, exhibits a greatly
+      asymmetric AOB, in which the aAOB has twice the size of the pAOB and
+      features more and larger glomeruli in its glomerular layer (GL). We found
+      that the same as in O. degus, the far less social O. lunatus also exhibits
+      a bias, albeit less pronounced, to a larger aAOB. In both species, this
+      bias was also evident for the mitral/tufted cells number. But unlike in O.
+      degus, in O. lunatus this bias was not present at the GL. In comparison
+      with O. degus, in O. lunatus the aAOB GL was significantly reduced in
+      volume, while the pAOB GL displayed a similar volume. We conclude that
+      these sister species exhibit a very sharp difference in the anatomical
+      conformation of the AOB, namely, the relative size of the GL of the aAOB
+      subdomain, which is larger in O. degus than in O. lunatus. We discuss
+      these results in the context of the differences in the lifestyle of these
+      species, highlighting the differences in social behaviour as a possible
+      factor driving to distinct AOB morphometries.
+    authors: Fernández-Aburto, P., Delgado, S. E., Sobrero, R., & Mpodozis, J. (2020)
+    link:
+      display: "Journal of Anatomy, 236: 612-621. doi:10.1111/joa.13126."
+      url: https://onlinelibrary.wiley.com/doi/abs/10.1111/joa.13126
+    image: /images/uploads/fernandez-aburto2020.png
   - highlight: 1
     link:
       url: https://www.karger.com/Article/Abstract/504162
@@ -106,6 +142,41 @@ papers:
     authors: Salazar, J. E., Severin, D., Vega-Zuniga, T., Fernández-Aburto, P.,
       Deichler, A., Sallaberry, M. A., & Mpodozis, J. (2019)
     image: /images/uploads/salazar2019.png
+  - highlight: 0
+    title: "The nucleus pretectalis principalis: A pretectal structure hidden in the
+      mammalian thalamus."
+    link:
+      display: "Journal of Comparative Neurology, 527: 372– 391. doi:
+        10.1002/cne.24540."
+      url: https://onlinelibrary.wiley.com/doi/abs/10.1002/cne.24540
+    description: Abstract. A defining feature of the amniote tecto‐fugal visual
+      pathway is a massive bilateral projection to the thalamus originating from
+      a distinct neuronal population, tectal ganglion cells (TGCs), of the optic
+      tectum/superior colliculus (TeO/SC). In sauropsids, the thalamic target of
+      the tecto‐fugal pathway is the nucleus rotundus thalami (Rt). TGCs axons
+      collateralize en route to Rt to target the nucleus pretectalis principalis
+      (PT), which in turn gives rise to bilateral projection to the TeO. In
+      rodents, the thalamic target of these TGCs afferents is the caudal
+      division of the pulvinar complex (PulC). No pretectal structures in
+      receipt of TGC collaterals have been described in this group. However,
+      Baldwin et al. (Journal of Comparative Neurology, 2011;519(6):1071–1094)
+      reported in the squirrel a feedback projection from the PulC to the SC.
+      Pulvino‐tectal (Pul‐T) cells lie at the caudal pole of the PulC,
+      intermingled with the axonal terminals of TGCs. Here, by performing a
+      combination of neuronal tracing, immunohistochemistry, immunofluorescence,
+      and in situ hybridization, we characterized the pattern of projections,
+      neurochemical profile, and genoarchitecture of Pul‐T cells in the diurnal
+      Chilean rodent Octodon degus. We found that Pul‐T neurons exhibit
+      pretectal, but not thalamic, genoarchitectonical markers, as well as
+      hodological and neurochemical properties that match specifically those of
+      the avian nucleus PT. Thus, we propose that Pul‐T cells constitute a
+      pretectal cell population hidden within the dorsal thalamus of mammals.
+      Our results solve the oddity entailed by the apparent existence of a
+      noncanonic descending sensory thalamic projection and further stress the
+      conservative character of the tectofugal pathway.
+    image: /images/uploads/deichler-2019.png
+    authors: Deichler, A., Carrasco, D., Gonzalez-Cabrera, C., Letelier, J. C.,
+      Marín, G., & Mpodozis, J. (2019)
   - highlight: 0
     title: Specificity versus ambiguity in the retina of vertebrates.
     link:
