--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -311,6 +311,41 @@ papers:
       url: https://www.nature.com/articles/srep41704
       display: "Scientific Reports, 7, 41704. doi: 10.1038/srep41704."
     image: /images/uploads/vega-zuniga-2017.png
+  - highlight: 1
+    title: The centrifugal visual system of a palaeognathous bird, the Chilean
+      Tinamou (Nothoprocta perdicaria).
+    authors: Krabichler, Q., Vega-Zuniga, T., Carrasco, D., Fernandez, M.,
+      Gutiérrez-Ibáñez, C., Marín, G., & Luksch, H. (2017)
+    link:
+      display: "Journal of Comparative Neurology, 525: 2514–2534. doi:
+        10.1002/cne.24195."
+      url: https://onlinelibrary.wiley.com/doi/abs/10.1002/cne.24195
+    description: Abstract. The avian centrifugal visual system, which projects from
+      the brain to the retina, has been intensively studied in several
+      Neognathous birds that have a distinct isthmo‐optic nucleus (ION).
+      However, birds of the order Palaeognathae seem to lack a proper ION in
+      histologically stained brain sections. We had previously reported in the
+      palaeognathous Chilean Tinamou (Nothoprocta perdicaria) that intraocular
+      injections of Cholera Toxin B subunit retrogradely label a considerable
+      number of neurons, which form a diffuse isthmo‐optic complex (IOC). In
+      order to better understand how this IOC‐based centrifugal visual system is
+      organized, we have studied its major components by means of in vivo and in
+      vitro tracing experiments. Our results show that the IOC, though
+      structurally less organized than an ION, possesses a dense core region
+      consisting of multipolar neurons. It receives afferents from neurons in
+      L10a of the optic tectum, which are distributed with a wider interneuronal
+      spacing than in Neognathae. The tecto‐IOC terminals are delicate and
+      divergent, unlike the prominent convergent tecto‐ION terminals in
+      Neognathae. The centrifugal IOC terminals in the retina are exclusively
+      divergent, resembling the terminals from “ectopic” centrifugal neurons in
+      Neognathae. We conclude that the Tinamou's IOC participates in a
+      comparable general IOC‐retina‐TeO‐IOC circuitry as the neognathous ION.
+      However, the connections between the components are structurally different
+      and their divergent character suggests a lower spatial resolution. Our
+      findings call for further comparative studies in a broad range of species
+      for advancing our understanding of the evolution, plasticity and
+      functional roles of the avian centrifugal visual system.
+    image: /images/uploads/krabichler2017.png
   - highlight: 0
     title: Specificity versus ambiguity in the retina of vertebrates.
     link:
