Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -579,6 +579,29 @@ papers:
     authors: González-Cabrera, C., Garrido-Charad, F., Roth, A., & Marín, G. J. (2015)
     image: /images/uploads/gonzalez-cabrera2015.png
   - highlight: 0
+    title: Skeletal plasticity in response to embryonic muscular activity underlies
+      the development and evolution of the perching digit of birds.
+    link:
+      url: https://www.nature.com/articles/srep09840
+      display: "Scientific Reports, 5, 9840: 1-11. doi: 10.1038/srep09840."
+    description: Abstract. Most birds have an opposable digit 1 (hallux) allowing
+      the foot to grasp, which evolved from the non-opposable hallux of early
+      theropod dinosaurs. An important morphological difference with early
+      theropods is the twisting of the long axis of its metatarsal. Here, we
+      show how embryonic musculature and the onset of its activity are required
+      for twisting of metatarsal 1 (Mt1) and retroversion of the hallux.
+      Pharmacologically paralyzed embryos do not fully retrovert the hallux and
+      have a straight Mt1 shaft, phenocopying the morphology of early tetanuran
+      dinosaurs. Molecular markers of cartilage maturation and ossification show
+      that differentiation of Mt1 is significantly delayed compared to Mt2-4. We
+      hypothesize on how delayed maturation may have increased plasticity,
+      facilitating muscular twisting. Our experimental results emphasize the
+      importance of embryonic muscular activity in the evolutionary origin of a
+      crucial adaptation.
+    authors: Francisco Botelho, J., Smith-Paredes, D., Soto-Acuña, S., Mpodozis, J.,
+      Palma, V., & Vargas, A. O. (2015)
+    image: /images/uploads/botelho2015.png
+  - highlight: 0
     title: Specificity versus ambiguity in the retina of vertebrates.
     link:
       url: https://pubmed.ncbi.nlm.nih.gov/5825764/
